--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@ body {
     
      <br />
    <div class="container">
+       <h1>HOVER EFFECTS { USING CLIP PATH }</h1>
        <div class="clip_path_image img1">
        </div>
        <div class="clip_path_image img2">
