--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@ body {
   background-color: rgba(253, 254, 255);
   height: 100%;
   width: 100%;
+  text-align:center; 
+}
+h1{
+    margin-top: 1rem;
 }
 .container {
     position: absolute;
